fix(ui): Grayscale - increase contrast

--- a/packages/ui/src/css/variables.css
+++ b/packages/ui/src/css/variables.css
@@ -24,23 +24,23 @@
 
   /*
    * Color scheme:
-   * http://mcg.mbitson.com/#!?mcgpalette0=%23da5a63&mcgpalette1=%236bb967&mcgpalette2=%23f6e27f&mcgpalette3=%234f5154&mcgpalette4=%233784d2&themename=mcgtheme
-   * https://coolors.co/3784d2-da5a63-6bb967-f6e27f-4f5154
+   * http://mcg.mbitson.com/#!?mcgpalette0=%23da5a63&mcgpalette1=%236bb967&mcgpalette2=%23f6e27f&mcgpalette3=%23313435&mcgpalette4=%233784d2&themename=mcgtheme
+   * https://coolors.co/3784d2-da5a63-6bb967-f6e27f-313435
    */
-  --color-gray-25: #fafbfb;
-  --color-gray-50 : #eaeaea;
-  --color-gray-100 : #cacbcc;
-  --color-gray-200 : #a7a8aa;
-  --color-gray-300 : #848587;
-  --color-gray-400 : #696b6e;
-  --color-gray-500 : #4f5154;
-  --color-gray-600 : #484a4d;
-  --color-gray-700 : #3f4043;
-  --color-gray-800 : #36373a;
-  --color-gray-900 : #262729;
+  --color-gray-25: #fafafa;
+  --color-gray-50: #e6e7e7;
+  --color-gray-100: #c1c2c2;
+  --color-gray-200: #989a9a;
+  --color-gray-300: #6f7172;
+  --color-gray-400: #505253;
+  --color-gray-500: #313435;
+  --color-gray-600: #2c2f30;
+  --color-gray-700: #252728;
+  --color-gray-800: #1f2122;
+  --color-gray-900: #131516;
 
   --color-gray-ultra-light: var(--color-gray-100);
-  --color-gray-light: var(--color-gray-300);
+  --color-gray-light: var(--color-gray-200);
   --color-gray: var(--color-gray-500);
   --color-gray-dark: var(--color-gray-700);
   --color-gray-ultra-dark: var(--color-gray-900);
